--- a/my-project/package.json
+++ b/my-project/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://Karthik2545.github.io/Book-My-Show-Clone",
+  "homepage":"https://Karthik2545.github.io/Book-My-Show-Demo",
   "name": "my-project",
   "version": "0.1.0",
   "private": true,
